# todo_FastAPI

./: README.md  pyproject.toml
practice_todo/: fastneon.py
tests/: test_main.py
todo-fastapi/: main.py
